--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: whatthephone
 <div class="hero-unit">
 	<div class="container">
 		<h1>You love it, and you know it</h1>
-		<p>Be the envy of your friends.</p>
-		<p><a class="btn btn-primary btn-large" href="/signup.html" title="Sign up">Shut up and take my money!</a></p>
+		<p>(Shut up and take my money!)</p>
+		<p><a class="btn btn-primary btn-large" href="{{ site.baseurl}}/signup.html" title="Sign up">Create account</a></p>
 	</div>
 </div>
 <div class="container">
@@ -16,12 +16,12 @@ title: whatthephone
 	{% for article in site.posts %}
   <div class="col-md-3">
     <div class="{{ article.offer }}">
-      <a href="{{ article.url }}" title="{{ article.title }}"><img src="{{ article.image }}" alt="{{ article.title }}" class="tile-image big-illustration"></a>
-      <h3 class="tile-title"><a href="{{ article.url }}" title="{{ article.title }}">{{ article.title }}</a></h3>
+      <a href="{{ site.baseurl}}{{ article.url }}" title="{{ article.title }}"><img src="{{ site.baseurl}}{{ article.image }}" alt="{{ article.title }}" class="tile-image big-illustration"></a>
+      <h3 class="tile-title"><a href="{{ site.baseurl}}{{ article.url }}" title="{{ article.title }}">{{ article.title }}</a></h3>
       <p>{{ article.intro }}</p>
 	  <span class="fui-heart"> {{ article.likes }} Likes</span>
 	  <p class="price">Price: {{ article.price }}</p>
-      <a class="btn btn-primary btn-large btn-block" href="{{ article.url }}">I want it!</a>
+      <a class="btn btn-primary btn-large btn-block" href="{{ site.baseurl}}{{ article.url }}">I want it!</a>
     </div>
   </div>
   {% endfor %}
